--- a/src/index.html
+++ b/src/index.html
@@ -44,8 +44,11 @@
     <link rel="icon" type="image/png" href="./app/admin/assets/img/favicon.ico">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body  class="animsition">
+<body  class="animsition mat-typography">
   <app-root></app-root>
 
 <script src="assets/js/jquery.min.js"></script> 
