--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.3/css/bootstrap-select.min.css" />
 </head>
 <body  class="animsition mat-typography">
   <app-root></app-root>
@@ -63,5 +65,6 @@
 <script src="assets/js/jquery.counterup.min.js"></script> 
 <script src="assets/js/main.js"></script>
 <script src="https://cdn.ckeditor.com/4.16.0/full/ckeditor.js"></script>
+
 </body>
 </html>
