--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
 <meta name="keywords" content="Pixel">
 <meta name="author" content="rkwebdesigns">
 
-  <title>ClicnicManagement</title>
-  <link rel="stylesheet" href="assets/css/main.css">
-	<link rel="stylesheet" href="assets/css/grid.css">
+  <title>Clinic </title>
+  <link rel="stylesheet" href="./assets/css/grid.css">
+	<link rel="stylesheet" href="./assets/css/main.css">
   <!-- Fav Icons   -->
 <link rel="icon" href="assets/images/favicon.png" type="image/x-icon">
 <!-- Bootstrap -->
